--- a/index.html
+++ b/index.html
@@ -172,34 +172,54 @@
     </script>
 
     <script type="text/x-handlebars" id="thing">
+      <div class="thing-container">
+          {{#thing-detail thing=this}}
+            <nav class="cl-effect-8">
+              <ul>
+                <li>{{link-to "Edit" "edit_thing" this}}</li>
+                <li><button class="btn btn-danger" {{action "destroy" }}>Delete</button></li>
+              </ul>
+            </nav>
 
-      {{#thing-detail thing=this}}
-        <nav class="cl-effect-8">
-          <ul>
-            <li>{{link-to "Edit" "edit_thing" this}}</li>
-            <li><button class="btn btn-danger" {{action "destroy" }}>Delete</button></li>
-          </ul>
+          {{/thing-detail}}
+          <nav class="cl-effect-8">
+            <ul>
+              <li><a href="#/things/new" style="color: #354856;" data-hover="Add New">Add New</a></li>
+              <li><a href="#/review" style="color: #354856;" data-hover="Review All">Review All</a></li>
+            </ul>
         </nav>
-
-      {{/thing-detail}}
-      <nav class="cl-effect-8">
-        <ul>
-          <li><a href="#/things/new" data-hover="Add New">Add New</a></li>
-          <li><a href="#/review" data-hover="Review All">Review All</a></li>
-        </ul>
-    </nav>
+      </div>
     </script>
 
     <script type="text/x-handlebars" id="results">
-    <h2>Congrats you now have clarity on your Top 7 Things!</h2>
-    <h4>The results are ranked in order of their importance to you right now</h4>
-      <nav class="cl-effect-8">
-        <ul>
-          
-          <li><a href="#/results" {{action "sortToggle" "rank"}} data-hover="Sort by Rank">Sort by Rank</a></li>
+      <div class="thing-container">
+        <h2>Congrats you now have clarity on your Top 7 Things!</h2>
+        <h4>The results are ranked in order of their importance to you right now</h4>
 
-        </ul>
-      </nav>
+          <div class="grid">
+
+            {{#each}}
+              <figure class="effect-ming">
+                <img {{bind-attr src=image }} />
+                <figcaption>
+                  <h2>
+                  {{#link-to "thing" this }} {{rank}} {{title}} {{/link-to}}
+                  </h2>
+
+                </figcaption>
+              </figure>
+            {{/each}}
+          </div>
+        </div>
+    </script>
+
+  <script type="text/x-handlebars" id="review_things">
+    <div class="thing-container">
+      <h2>Congrats on creating your Top 7 Things!</h2>
+      <h4>Out of the two things below, which one is more important to you right now?</h4>
+      <p>If this is hard to choose, ask yourself if I could have "a" but not "b",
+      would I be okay with that? If you said yes, vote on "a". If not, vote on "b".
+      <p>
       <div class="grid">
 
         {{#each}}
@@ -207,39 +227,16 @@
             <img {{bind-attr src=image }} />
             <figcaption>
               <h2>
-              {{#link-to "thing" this }} {{rank}} {{title}} {{/link-to}}
+               {{rank}} {{title}}
               </h2>
-
+              <p> Vote yes on this thing
+              <i class="glyphicon glyphicon-chevron-up" {{action "upvote" this }}></i>
+              </p>
             </figcaption>
           </figure>
         {{/each}}
       </div>
-    </script>
-
-  <script type="text/x-handlebars" id="review_things">
-
-  <h2>Congrats on creating your 7 Top Things!</h2>
-  <h4>Out of the two things below, which one is more important to you right now?</h4>
-  <p>If this is hard to choose, ask yourself if I could have "a" but not "b",
-  would I be okay with that? If you said yes, vote on "a". If not, vote on "b".
-  <p>
-  <div class="grid">
-
-    {{#each}}
-      <figure class="effect-ming">
-        <img {{bind-attr src=image }} />
-        <figcaption>
-          <h2>
-           {{rank}} {{title}}
-          </h2>
-          <p> Vote yes on this thing
-          <i class="glyphicon glyphicon-chevron-up" {{action "upvote" this }}></i>
-          </p>
-        </figcaption>
-      </figure>
-    {{/each}}
-  </div>
-
+    </div>
   </script>
 
     <script type="text/x-handlebars" id="index">
