results rank from highest to lowest

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               <h2>
                {{rank}} {{title}}
               </h2>
-              <p> Vote yes on this thing
+              <p> Vote on this thing
               <i class="glyphicon glyphicon-chevron-up" {{action "upvote" this }}></i>
               </p>
             </figcaption>
